--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,22 @@ aiosignal==1.3.2
 aiosqlite==0.20.0
 alembic==1.14.1
 annotated-types==0.7.0
+anyio==4.8.0
 attrs==25.1.0
 black==24.10.0
+blinker==1.9.0
 certifi==2024.12.14
 click==8.1.8
 croniter==6.0.0
+fastapi==0.115.11
+Flask==3.1.0
 frozenlist==1.5.0
 future==1.0.0
 greenlet==3.1.1
+h11==0.14.0
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
 magic-filter==1.0.12
 Mako==1.3.8
 MarkupSafe==3.0.2
@@ -31,7 +38,11 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 six==1.17.0
+sniffio==1.3.1
 SQLAlchemy==2.0.37
+starlette==0.46.1
 typing_extensions==4.12.2
 tzlocal==5.2
+uvicorn==0.32.0
+Werkzeug==3.1.3
 yarl==1.18.3
