--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 80;
-        server_name your-domain;
+        server_name 37.252.22.232;    #your-domain
 
         # Перенаправляем все HTTP-запросы на HTTPS
         return 301 https://$host$request_uri;
@@ -13,7 +13,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name your-domain;
+        server_name 37.252.22.232;    #your-domain
 
         ssl_certificate /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
