--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - PYTHONPATH=/app
     depends_on:
       - api
-      - migrate
+#      - migrate
     restart: unless-stopped
 
   api:
@@ -27,8 +27,8 @@ services:
       - ./logs:/app/logs
     environment:
       - PYTHONPATH=/app
-    depends_on:
-      - migrate
+#    depends_on:
+#      - migrate
     restart: unless-stopped
 
   admin:
@@ -45,7 +45,7 @@ services:
       - FLASK_ENV=production
     depends_on:
       - api
-      - migrate
+#      - migrate
     restart: unless-stopped
 
 #  migrate:
