--- a/nginx.conf
+++ b/nginx.conf
@@ -5,24 +5,21 @@ events {
 http {
     server {
         listen 80;
-        server_name 37.252.22.232;    #your-domain
+        server_name 37.252.22.232;
 
-        # Перенаправляем все HTTP-запросы на HTTPS
+        # Перенаправляем HTTP на HTTPS
         return 301 https://$host$request_uri;
     }
 
     server {
         listen 443 ssl;
-        server_name 37.252.22.232;    #your-domain
+        server_name 37.252.22.232;
 
         ssl_certificate /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
-
-        # Настройки SSL (опционально, для безопасности)
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
 
-        # Проксирование для админ-панели
         location /admin/ {
             proxy_pass http://admin:5000/;
             proxy_set_header Host $host;
@@ -31,7 +28,14 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Проксирование для API
+        location /static/ {
+            proxy_pass http://admin:5000/static/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location /api/ {
             proxy_pass http://api:8000/;
             proxy_set_header Host $host;
@@ -40,7 +44,6 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Корневой путь (опционально, можно настроить редирект или заглушку)
         location / {
             return 200 "Welcome to Bun Bot!";
         }
