--- a/Dockerfile.migrate
+++ b/Dockerfile.migrate
@@ -7,6 +7,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Копируем только нужные файлы для миграций
+COPY alembic.ini ./
 COPY database/ ./database/
 COPY migrations/ ./migrations/
 
