--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,8 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///db.sqlite3
+;sqlalchemy.url = sqlite:///db.sqlite3
+sqlalchemy.url = sqlite:////app/db.sqlite3
 
 
 [post_write_hooks]
