--- a/Dockerfile.bot
+++ b/Dockerfile.bot
@@ -7,6 +7,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Копируем только нужные файлы для бота
+COPY config.py .
 COPY main.py .
 COPY handlers/ ./handlers/
 COPY database/ ./database/
