--- a/admin/Dockerfile.admin
+++ b/admin/Dockerfile.admin
@@ -7,6 +7,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Копируем только нужные файлы для админ-панели
+COPY config.py .
 COPY admin/ ./admin/
 COPY database/ ./database/
 COPY logger.py .
