--- a/api/Dockerfile.api
+++ b/api/Dockerfile.api
@@ -7,6 +7,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Копируем только нужные файлы для API
+COPY config.py .
 COPY api/ ./api/
 COPY database/ ./database/
 COPY logger.py .
