--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,19 +1,13 @@
 FROM nginx:alpine
 
-# Устанавливаем OpenSSL для генерации сертификатов
-RUN apk add --no-cache openssl
+# Устанавливаем OpenSSL и Certbot
+RUN apk add --no-cache openssl certbot
 
 # Копируем конфигурацию Nginx
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Создаем директорию для сертификатов
-RUN mkdir -p /etc/nginx/certs
-
-# Генерируем самоподписанные сертификаты (для теста)
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
-    -keyout /etc/nginx/certs/server.key \
-    -out /etc/nginx/certs/server.crt \
-    -subj "/C=RU/ST=State/L=City/O=Organization/OU=Unit/CN=your-domain"
+# Создаем директорию для сертификатов (если не используем самоподписанные)
+RUN mkdir -p /etc/letsencrypt
 
 # Указываем права доступа
-RUN chmod 600 /etc/nginx/certs/server.key /etc/nginx/certs/server.crt
+RUN chmod 700 /etc/letsencrypt
