--- a/nginx.conf
+++ b/nginx.conf
@@ -24,8 +24,8 @@ http {
         server_name 37.252.22.232;  # Замените на ваш домен или IP
 
         # Пути к сертификатам Let's Encrypt (будут созданы Certbot)
-        ssl_certificate /etc/letsencrypt/live/your-domain/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/your-domain/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/37.252.22.232/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/37.252.22.232/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
 
