--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,13 +1,12 @@
 FROM nginx:alpine
 
-# Устанавливаем OpenSSL и Certbot
-RUN apk add --no-cache openssl certbot
+RUN apk add --no-cache openssl
 
-# Копируем конфигурацию Nginx
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Создаем директорию для сертификатов (если не используем самоподписанные)
-RUN mkdir -p /etc/letsencrypt
-
-# Указываем права доступа
-RUN chmod 700 /etc/letsencrypt
+RUN mkdir -p /etc/nginx/certs && \
+    openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+    -keyout /etc/nginx/certs/server.key \
+    -out /etc/nginx/certs/server.crt \
+    -subj "/C=RU/ST=State/L=City/O=Organization/OU=Unit/CN=37.252.22.232" && \
+    chmod 600 /etc/nginx/certs/server.key /etc/nginx/certs/server.crt
