--- a/nginx.conf
+++ b/nginx.conf
@@ -5,15 +5,8 @@ events {
 http {
     server {
         listen 80;
-        server_name 37.252.22.232;  # Замените на ваш домен или IP
+        server_name 37.252.22.232;
 
-        # Временный блок для проверки Let's Encrypt
-        location /.well-known/acme-challenge/ {
-            root /var/www/html;
-            try_files $uri $uri/ =404;
-        }
-
-        # Перенаправляем всё остальное на HTTPS после получения сертификатов
         location / {
             return 301 https://$host$request_uri;
         }
@@ -21,11 +14,10 @@ http {
 
     server {
         listen 443 ssl;
-        server_name 37.252.22.232;  # Замените на ваш домен или IP
+        server_name 37.252.22.232;
 
-        # Пути к сертификатам Let's Encrypt (будут созданы Certbot)
-        ssl_certificate /etc/letsencrypt/live/37.252.22.232/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/37.252.22.232/privkey.pem;
+        ssl_certificate /etc/nginx/certs/server.crt;
+        ssl_certificate_key /etc/nginx/certs/server.key;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
 
