--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 80;
-        server_name 37.252.22.232;
+        server_name 85.193.91.223;   #  37.252.22.232;
 
         location / {
             return 301 https://$host$request_uri;
@@ -14,7 +14,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name 37.252.22.232;
+        server_name 85.193.91.223;
 
         ssl_certificate /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
