--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,55 @@
+# events {
+#     worker_connections 1024;
+# }
+#
+# http {
+#     server {
+#         listen 80;
+#         server_name 85.193.91.223;   #  37.252.22.232;
+#
+#         location / {
+#             return 301 https://$host$request_uri;
+#         }
+#     }
+#
+#     server {
+#         listen 443 ssl;
+#         server_name 85.193.91.223;
+#
+#         ssl_certificate /etc/nginx/certs/server.crt;
+#         ssl_certificate_key /etc/nginx/certs/server.key;
+#         ssl_protocols TLSv1.2 TLSv1.3;
+#         ssl_prefer_server_ciphers on;
+#
+#         location /admin/ {
+#             proxy_pass http://admin:5000/;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#
+#         location /static/ {
+#             proxy_pass http://admin:5000/static/;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#
+#         location /api/ {
+#             proxy_pass http://api:8000/;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#
+#         location / {
+#             return 200 "Welcome to Bun Bot!";
+#         }
+#     }
+# }
 events {
     worker_connections 1024;
 }
@@ -5,7 +57,7 @@ events {
 http {
     server {
         listen 80;
-        server_name 85.193.91.223;   #  37.252.22.232;
+        server_name 85.193.91.223;
 
         location / {
             return 301 https://$host$request_uri;
@@ -21,32 +73,22 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
 
-        location /admin/ {
-            proxy_pass http://admin:5000/;
+        # Проксируем все запросы к Flask (admin)
+        location / {
+            proxy_pass http://admin:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /static/ {
-            proxy_pass http://admin:5000/static/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
+        # Проксируем API
         location /api/ {
             proxy_pass http://api:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location / {
-            return 200 "Welcome to Bun Bot!";
         }
     }
 }
