--- a/nginx.conf
+++ b/nginx.conf
@@ -1,55 +1,3 @@
-# events {
-#     worker_connections 1024;
-# }
-#
-# http {
-#     server {
-#         listen 80;
-#         server_name 85.193.91.223;   #  37.252.22.232;
-#
-#         location / {
-#             return 301 https://$host$request_uri;
-#         }
-#     }
-#
-#     server {
-#         listen 443 ssl;
-#         server_name 85.193.91.223;
-#
-#         ssl_certificate /etc/nginx/certs/server.crt;
-#         ssl_certificate_key /etc/nginx/certs/server.key;
-#         ssl_protocols TLSv1.2 TLSv1.3;
-#         ssl_prefer_server_ciphers on;
-#
-#         location /admin/ {
-#             proxy_pass http://admin:5000/;
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#         }
-#
-#         location /static/ {
-#             proxy_pass http://admin:5000/static/;
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#         }
-#
-#         location /api/ {
-#             proxy_pass http://api:8000/;
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#         }
-#
-#         location / {
-#             return 200 "Welcome to Bun Bot!";
-#         }
-#     }
-# }
 events {
     worker_connections 1024;
 }
@@ -73,9 +21,9 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
 
-        # Проксируем все запросы к Flask (admin)
-        location / {
-            proxy_pass http://admin:5000;
+        # Проксируем запросы с /crewassrun к Flask
+        location /crewassrun/ {
+            proxy_pass http://admin:5000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -89,6 +37,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Дефолтный маршрут для других проектов
+        location / {
+            return 200 "Welcome to the server!";
         }
     }
 }
