--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,6 +101,11 @@ services:
         limits:
           cpus: '0.5'
           memory: 256M
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8000/users/" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   admin:
     build:
@@ -115,7 +120,8 @@ services:
       - PYTHONPATH=/app
       - FLASK_ENV=production
     depends_on:
-      - api
+      api:
+        condition: service_healthy
     restart: unless-stopped
     deploy:
       resources:
@@ -132,8 +138,9 @@ services:
       - "80:80"
       - "443:443"
     depends_on:
-      - api
-      - admin
+#      - admin
+      api:
+        condition: service_healthy
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     restart: unless-stopped
