--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,7 @@ http {
         listen 80;
         server_name 85.193.91.223;
 
+        # Перенаправляем HTTP на HTTPS
         location / {
             return 301 https://$host$request_uri;
         }
@@ -16,12 +17,13 @@ http {
         listen 443 ssl;
         server_name 85.193.91.223;
 
+        # Пути к самоподписным сертификатам
         ssl_certificate /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
 
-        # Проксируем запросы с /crewassrun к Flask
+        # Проксируем запросы с /crewassrun/ к Flask (admin)
         location /crewassrun/ {
             proxy_pass http://admin:5000/;
             proxy_set_header Host $host;
@@ -30,7 +32,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Проксируем API
+        # Проксируем запросы с /api/ к FastAPI
         location /api/ {
             proxy_pass http://api:8000/;
             proxy_set_header Host $host;
@@ -39,7 +41,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Дефолтный маршрут для других проектов
+        # Дефолтный маршрут
         location / {
             return 200 "Welcome to the server!";
         }
