--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,6 @@ http {
         listen 80;
         server_name 85.193.91.223;
 
-        # Перенаправляем HTTP на HTTPS
         location / {
             return 301 https://$host$request_uri;
         }
@@ -17,31 +16,27 @@ http {
         listen 443 ssl;
         server_name 85.193.91.223;
 
-        # Пути к самоподписным сертификатам
         ssl_certificate /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
 
-        # Проксируем запросы с /crewassrun/ к Flask (admin)
         location /crewassrun/ {
-            proxy_pass http://admin:5000/;
+            proxy_pass http://admin:5000;  # Без слеша
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Проксируем запросы с /api/ к FastAPI
         location /api/ {
-            proxy_pass http://api:8000/;
+            proxy_pass http://api:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Дефолтный маршрут
         location / {
             return 200 "Welcome to the server!";
         }
