--- a/nginx.conf
+++ b/nginx.conf
@@ -21,14 +21,16 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
 
+        # Проксирование только для /crewassrun/
         location /crewassrun/ {
-            proxy_pass http://admin:5000;  # Без слеша
+            proxy_pass http://admin:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Проксирование для /api/
         location /api/ {
             proxy_pass http://api:8000;
             proxy_set_header Host $host;
@@ -37,8 +39,9 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Всё остальное — 404
         location / {
-            return 200 "Welcome to the server!";
+            return 404;
         }
     }
 }
