--- a/nginx.conf
+++ b/nginx.conf
@@ -19,6 +19,7 @@ http {
         ssl_certificate /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
         ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;  # Уточняем шифры
         ssl_prefer_server_ciphers on;
 
         location /crewassrun/ {
@@ -38,7 +39,7 @@ http {
         }
 
         location / {
-            return 404;
+            return 404;  # Всё остальное — 404
         }
     }
 }
