--- a/nginx.conf
+++ b/nginx.conf
@@ -19,9 +19,10 @@ http {
         ssl_certificate /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
         ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;  # Уточняем шифры
+        ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
 
+        # Админка
         location /crewassrun/ {
             proxy_pass http://admin:5000;
             proxy_set_header Host $host;
@@ -30,6 +31,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # API
         location /api/ {
             proxy_pass http://api:8000;
             proxy_set_header Host $host;
@@ -38,8 +40,9 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Всё остальное — 404
         location / {
-            return 404;  # Всё остальное — 404
+            return 404;
         }
     }
 }
