--- a/admin/Dockerfile.admin
+++ b/admin/Dockerfile.admin
@@ -1,7 +1,7 @@
 FROM python:3.11-slim
 
 WORKDIR /app
-COPY admin/requirements.txt .
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY admin/app.py .
 COPY admin/templates ./templates
