--- a/nginx.conf
+++ b/nginx.conf
@@ -22,8 +22,8 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
 
-        # Админка
-        location /crewassrun/ {
+        # Админка (все маршруты, включая /login)
+        location / {
             proxy_pass http://admin:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -33,16 +33,11 @@ http {
 
         # API
         location /api/ {
-            proxy_pass http://api:8000;
+            proxy_pass http://api:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Всё остальное — 404
-        location / {
-            return 404;
         }
     }
 }
