--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ events {}
 http {
     server {
         listen 80;
-        server_name your_domain_or_ip;  # Будет заменено через DOMAIN_OR_IP
+        server_name 93.183.81.123;  # Будет заменено через DOMAIN_OR_IP
 
         # Перенаправление всех HTTP-запросов на HTTPS
         return 301 https://$host$request_uri;
@@ -11,7 +11,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name your_domain_or_ip;  # Будет заменено через DOMAIN_OR_IP
+        server_name 93.183.81.123;  # Будет заменено через DOMAIN_OR_IP
 
         ssl_certificate /etc/nginx/certs/selfsigned.crt;
         ssl_certificate_key /etc/nginx/certs/selfsigned.key;
