--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -6,6 +6,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+COPY .env ./
 COPY admin/ ./admin
 COPY database/ ./database
 COPY config.py logger.py ./
