--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ events {}
 http {
     server {
         listen 80;
-        server_name 93.183.81.123;  # Будет заменено через DOMAIN_OR_IP
+        server_name ${DOMAIN_OR_IP};  # Используем переменную из .env
 
         # Перенаправление всех HTTP-запросов на HTTPS
         return 301 https://$host$request_uri;
@@ -11,7 +11,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name 93.183.81.123;  # Будет заменено через DOMAIN_OR_IP
+        server_name ${DOMAIN_OR_IP};
 
         ssl_certificate /etc/nginx/certs/selfsigned.crt;
         ssl_certificate_key /etc/nginx/certs/selfsigned.key;
@@ -22,6 +22,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            rewrite ^/crewassrun(.*)$ $1 break;
         }
 
         location /crewassrun/api/ {
@@ -30,6 +31,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            rewrite ^/crewassrun/api(.*)$ $1 break;
+        }
+
+        location / {
+            return 200 "Welcome to Crewassrun! Use /crewassrun/ for admin or /crewassrun/api/ for API.";
+            add_header Content-Type text/plain;
         }
     }
 }
