--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,86 @@
+#version: '3.8'
+#
+#services:
+#  bot:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile.bot
+#    environment:
+#      - API_TOKEN=${API_TOKEN}
+#      - CHAT_ID=${CHAT_ID}
+#      - ADMIN=${ADMIN}
+#      - FOR_LOGS=${FOR_LOGS}
+#      - DATABASE_URL=${DATABASE_URL}
+#    volumes:
+#      - ./logs:/app/logs
+#      - ./database:/app/database
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: '0.5'
+#          memory: 256M
+#
+#  api:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile.api
+#    environment:
+#      - API_TOKEN=${API_TOKEN}
+#      - DATABASE_URL=${DATABASE_URL}
+#    volumes:
+#      - ./logs:/app/logs
+#      - ./database:/app/database
+#    ports:
+#      - "8000:8000"
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: '0.5'
+#          memory: 256M
+#
+#  admin:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile.admin
+#    environment:
+#      - API_TOKEN=${API_TOKEN}
+#      - DATABASE_URL=${DATABASE_URL}
+#      - ADMIN_FOR_ADMIN=${ADMIN_FOR_ADMIN}
+#      - PASSWORD_FOR_ADMIN=${PASSWORD_FOR_ADMIN}
+#    volumes:
+#      - ./logs:/app/logs
+#      - ./database:/app/database
+#    ports:
+#      - "5000:5000"
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: '0.5'
+#          memory: 256M
+#
+#  nginx:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile.nginx
+#      args:
+#        - DOMAIN_OR_IP=${DOMAIN_OR_IP}  # Передаем домен или IP через переменную окружения
+#    ports:
+#      - "80:80"
+#      - "443:443"
+#    volumes:
+#      - ./nginx.conf:/etc/nginx/nginx.conf:ro  # Копируем конфиг, но он уже в образе, это для переопределения
+#    depends_on:
+#      - api
+#      - admin
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: '0.25'
+#          memory: 128M
+#
+#volumes:
+#  logs:
+#  database:
 version: '3.8'
 
 services:
@@ -45,7 +128,6 @@ services:
     environment:
       - API_TOKEN=${API_TOKEN}
       - DATABASE_URL=${DATABASE_URL}
-      - ADMIN_FOR_ADMIN=${ADMIN_FOR_ADMIN}
       - PASSWORD_FOR_ADMIN=${PASSWORD_FOR_ADMIN}
     volumes:
       - ./logs:/app/logs
@@ -63,12 +145,12 @@ services:
       context: .
       dockerfile: Dockerfile.nginx
       args:
-        - DOMAIN_OR_IP=${DOMAIN_OR_IP}  # Передаем домен или IP через переменную окружения
+        - DOMAIN_OR_IP=${DOMAIN_OR_IP}
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro  # Копируем конфиг, но он уже в образе, это для переопределения
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - api
       - admin
