--- a/nginx.conf
+++ b/nginx.conf
@@ -3,9 +3,7 @@ events {}
 http {
     server {
         listen 80;
-        server_name ${DOMAIN_OR_IP};  # Используем переменную из .env
-
-        # Перенаправление всех HTTP-запросов на HTTPS
+        server_name ${DOMAIN_OR_IP};
         return 301 https://$host$request_uri;
     }
 
@@ -17,12 +15,12 @@ http {
         ssl_certificate_key /etc/nginx/certs/selfsigned.key;
 
         location /crewassrun/ {
-            proxy_pass http://admin:5000/;
+            proxy_pass http://admin:5000/crewassrun/;  # Передаем полный путь
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            rewrite ^/crewassrun(.*)$ $1 break;
+            # Убрали rewrite
         }
 
         location /crewassrun/api/ {
