--- a/nginx.conf
+++ b/nginx.conf
@@ -14,15 +14,16 @@ http {
         ssl_certificate /etc/nginx/certs/selfsigned.crt;
         ssl_certificate_key /etc/nginx/certs/selfsigned.key;
 
-        location /crewassrun/ {
-            proxy_pass http://admin:5000/crewassrun/;  # Передаем полный путь
+        # Проксирование админки (включая /login)
+        location / {
+            proxy_pass http://admin:5000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            # Убрали rewrite
         }
 
+        # Проксирование API
         location /crewassrun/api/ {
             proxy_pass http://api:8000/;
             proxy_set_header Host $host;
@@ -32,9 +33,6 @@ http {
             rewrite ^/crewassrun/api(.*)$ $1 break;
         }
 
-        location / {
-            return 200 "Welcome to Crewassrun! Use /crewassrun/ for admin or /crewassrun/api/ for API.";
-            add_header Content-Type text/plain;
-        }
+        # Убрали статический ответ для корня, теперь он обрабатывается Flask
     }
 }
