--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -11,4 +11,7 @@ COPY admin/ ./admin
 COPY database/ ./database
 COPY config.py logger.py ./
 
-CMD ["flask", "--app", "admin.app", "run", "--host", "0.0.0.0", "--port", "5000"]
+ENV PYTHONUNBUFFERED=1
+ENV DOCKER_ENV=1
+
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "admin.app:app"]
