--- a/Dockerfile.bot
+++ b/Dockerfile.bot
@@ -4,9 +4,18 @@ FROM python:3.11-slim
 WORKDIR /app
 
 COPY requirements.txt .
+
+# Устанавливаем часовой пояс
+ENV TZ=Europe/Moscow
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+ENV PYTHONUNBUFFERED=1
+# ENV REDIS_HOST=redis
+# ENV REDIS_PORT=6379
 
 CMD ["python", "main.py"]
