--- a/nginx.conf
+++ b/nginx.conf
@@ -3,13 +3,13 @@ events {}
 http {
     server {
         listen 80;
-        server_name ${DOMAIN_OR_IP};
+        server_name 93.183.81.123;
         return 301 https://$host$request_uri;
     }
 
     server {
         listen 443 ssl;
-        server_name ${DOMAIN_OR_IP};
+        server_name 93.183.81.123;
 
         ssl_certificate /etc/nginx/certs/selfsigned.crt;
         ssl_certificate_key /etc/nginx/certs/selfsigned.key;
